--- a/Store.API/appsettings.json
+++ b/Store.API/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AuthOptions": {
+        "AUDIENCE": "siteAddress",
+        "ISSUER": "MyAuthServer",
+        "KEY": "MyAuthServer",
+        "LIFETIME": "30"
     }
-  },
-  "AllowedHosts": "*"
 }
