--- a/Store.API/appsettings.json
+++ b/Store.API/appsettings.json
@@ -7,7 +7,11 @@
     "AuthOptions": {
         "AUDIENCE": "siteAddress",
         "ISSUER": "MyAuthServer",
-        "KEY": "MyAuthServer",
+        "KEY": "8F753FB7C098423D8C7512B4F5A4E19A",
         "LIFETIME": "30"
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DataBase": "Data Source=localhost;Initial Catalog=Store;User Id=store;Password=bfke7mQLt7hD;Max Pool Size=2048;Pooling=true;MultipleActiveResultSets=True;"
     }
 }
