--- a/Store.Parser/appsettings.json
+++ b/Store.Parser/appsettings.json
@@ -4,5 +4,8 @@
             "Default": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DataBase": "Data Source=localhost;Initial Catalog=Store;User Id=store;Password=bfke7mQLt7hD;Max Pool Size=2048;Pooling=true;MultipleActiveResultSets=True;"
+    }
 }
